# VACASK

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  mkdocs.yml  packaging.cmake  pyproject.toml  sitemap.xml
.github/workflows/: benchmark.yml  build-docs.yml  ci.yml  deploy-docs.yml  preview-docs.yml  test.yml
benchmark/: README.md  benchmark.py
benchmark/c6288/ngspice-sparse/: models.inc  multiplier.inc  prepare.py  runme.sim
bug/: test_tran.sim
config/: vacaskrc-sample.toml
demo/: cmos180n.lib  mosmm.inc  nlblock.sim
demo/api/: CMakeLists.txt  apidemo.cpp  demo1.cpp  demo2.cpp  demo3.cpp  demo4.cpp  demo5.cpp
demo/bsim3-ptm/: amp.sim  characteristic.sim  diffpair.sim  mirror.sim
demo/bsim3-ptm-amp/: miller.inc  op1.raw  toplevel.sim
demo/control/: initfatal.sim  output.sim  runfatal.sim  runfinish.sim  runstop.sim  uncondfatal.sim
demo/gilbert/: gilbert.sim  models.inc
demo/hierarchy/: hier.sim
demo/ihp-sg13g2/: .vacaskrc.toml  README.md  dc_lv_nmos.sch  hbt.sim  mos.sim  stdcell.sim  tran_inv.sch  tran_rs.sch  xschemrc
demo/limiting/: builtin.sim  custom.sim
demo/natures/: README.md  ddt.sim  ibrictl.sim  idt.sim  switchbr.sim  vbr.sim
demo/rpn/: parser.sim  sipfx.sim
demo/sc/: lpfilter.sim  opamp.sim
demo/spice/: bjt.sim  bjtamp.sim  bjtinv.sim  bjtnqs.sim  bsim3v3.inc  bsim3v3.sim  bsim3v30.inc  bsim3v30.sim  bsim3v30amp.sim  bsim3v30inv.sim  bsim3v30nqs.sim  bsim3v3amp.sim  bsim3v3inv.sim  bsim3v3nqs.sim  bsim4v8.sim  bsim4v82.inc  bsim4v8amp.sim  bsim4v8inv.sim  bsim4v8nqs.sim  dio.sim  jfet.sim  jfet1.sim  jfet1amp.sim  jfet1inv.sim  jfet2.sim  jfet2amp.sim  jfet2inv.sim  jfetamp.sim  jfetinv.sim  mes1.sim  mes1amp.sim  mes1inv.sim  mos1.sim  mos1amp.sim  mos1inv.sim  mos2.sim  mos2amp.sim  mos2inv.sim  mos3.sim  mos3amp.sim  (+19 more)
demo/xschem/: README.md  rfosc.sch  xschemrc
devices/: CMakeLists.txt  bsim3v3.va  bsim4v8.va  capacitor.va  diode.va  inductor.va  opamp.va  resistor.osdi  resistor.va
devices/psp103v4/: JUNCAP200_parlist.include  psp103.va
devices/spice/: bjt.va  bsim3v3.va  bsim3v30.va  bsim3v330.va  bsim4v8.va  capacitor.va  diode.va  inductor.va  jfet.va  jfet1.va  jfet2.va  mes1.va  mos1.va  mos2.va  mos3.va  mos6.va  mos9.va  resistor.va  vdmos.va
docs/: analysis_types.md  index.md  operating_point.md  simulation_options.md  transient.md
inc/: CMakeLists.txt  builtins.inc
inc/ihp-open-pdk/: README.md
include/: acct.h  an.h  anac.h  anactf.h  anacxf.h  andcinc.h  andctf.h  andcxf.h  anhb.h  annoise.h  anop.h  ansmsig.h  ansolution.h  ansupport.h  answeep.h  antran.h  circuit.h  comdata.h  common.h  context.h  core.h  coreac.h  coreactf.h  coreacxf.h  coredcinc.h  coredctf.h  coredcxf.h  corehb.h  corehbnr.h  corenoise.h  coreop.h  coreopnr.h  coretran.h  coretrancoef.h  coretrannr.h  densematrix.h  devbase.h  devbuiltin.h  devbuiltins.h  devctlsrc.h  (+50 more)
lib/: CMakeLists.txt  acct.cpp  an.cpp  anac.cpp  anactf.cpp  anacxf.cpp  andcinc.cpp  andctf.cpp  andcxf.cpp  anhb.cpp  annoise.cpp  anop.cpp  ansolution.cpp  ansupport.cpp  answeep.cpp  antran.cpp  circuit.cpp  ciroptions.cpp  cirparams.cpp  cirvariables.cpp  comdata.cpp  context.cpp  core.cpp  coreac.cpp  coreactf.cpp  coreacxf.cpp  coredcinc.cpp  coredctf.cpp  coredcxf.cpp  corehb.cpp  corehbcoloc.cpp  corehbnr.cpp  corehbspec.cpp  corehbxform.cpp  corenoise.cpp  coreop.cpp  coreophomotopy.cpp  coreopnr.cpp  coretran.cpp  coretrancoef.cpp  (+50 more)
operating_point/: index.html
pr-preview/pr-5/: 404.html  index.html  sitemap.xml
python/: CMakeLists.txt  README.md  hspice2vc.py  ltspice2vc.py  netlist_converter.py  ng2vc.py  pyproject.toml  rawfile.py  runtest.py  sg13g2tovc.py  sg13g2xschem.tcl  xschem2vc.py
python/netlist_converter/: __main__.py  converter.py  dfl.py  generators.py  m_devices.py  m_inst_d.py  m_inst_passive.py  m_inst_x.py  m_masters.py  m_model.py  m_output.py  m_params.py
python/ng2vclib/: converter.py  dfl.py  exc.py  generators.py  m_devices.py  m_file.py  m_inst_d.py  m_inst_n.py  m_inst_passive.py  m_inst_q.py  m_inst_v.py  m_inst_x.py  m_masters.py  m_model.py  m_output.py  m_params.py  patterns.py
python/spiceparser/: __init__.py  dialect.py  elements.py  netlist.py  params.py  parser.py
python/spiceparser/dialects/: __init__.py  hspice.py  ltspice.py  ngspice.py  spectre.py
python/tests/: __init__.py  conftest.py  test_converter.py  test_dialect.py  test_elements.py  test_hspice.py  test_ltspice.py  test_mc_gauss.py  test_params.py  test_parser.py  test_spectre.py
python/tests/fixtures/hspice/: binned_model.sp  inverter_testbench.sp  mc_gauss_params.sp  nmos_library.lib
python/tests/fixtures/ltspice/: rc_parasitics.sp
python/tests/fixtures/ngspice/: bsim4_nmos_id.sp  mc_gauss_params.sp  modelcard_bsim4_nmos.mod  psp_inverter.sp  simple_inverter.sp  simple_subcircuit.sp
python/tests/fixtures/spectre/: inverter.scs  library_sections.scs  mixed_dialect.scs  statistics_block.scs
python/vcwriter/: __init__.py  writer.py
simulator/: CMakeLists.txt  cmd.cpp  cmd.h  config.cpp  config.h  dfllexer.l  dflparser.y  dflscanner.h  location.cpp  main.cpp  parser.cpp  parser.h  platform.cpp  platform.h  progressbar.cpp  progressbar.h  srccompiler.cpp  srccompiler.h
sources/: LICENSE
test/: CMakeLists.txt  bsimbulk106.inc  diocalc.py  resonator.sim  run_xyce_tests.py  simdio.va  test_ac.sim  test_actf.sim  test_acxf.sim  test_build.sim  test_capacitor.sim  test_cblock.sim  test_cblocksweep.sim  test_ctlsrc.sim  test_dcinc.sim  test_dctf.sim  test_dcxf.sim  test_diode.sim  test_hb1.sim  test_hb2.sim  test_hb3.sim  test_hb4.sim  test_hb4a.sim  test_hb5.sim  test_hb6.sim  test_inductor.sim  test_inverter.sim  test_mutual.sim  test_noise.sim  test_op.sim  test_opnl.sim  test_opnodeset.sim  test_opstore.sim  test_opsweep.sim  test_optpar.sim  test_resistor.sim  test_sweep.sim  test_sweeppar.sim  test_sweepvar.sim  test_sweepvec.sim  (+5 more)
test/ihp_sg13g2/: sg13g2_moslv.inc  test_sg13g2_inverter.sim
test/tb_dp/: plot.py  psp103_ihp.osdi  runme.py  tb_dp512x8.sim  tb_dp512x8_as_klu.spi  tb_dp512x8_klu.spi  tb_dp512x8_sparse.spi
(+100 files in other folders)
