[project]
name = "vacask-docs"
version = "0.1.0"
description = "Documentation for VACASK - Verilog-A Circuit Analysis Kernel"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "pymdown-extensions>=10.7",
]

[dependency-groups]
dev = []
