add_library(simlib STATIC
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/common.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/generator.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/acct.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/libplatform.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/flags.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/exportdef.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/dynload.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/limitfunctions.h
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/status.h
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/value.h
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/parameterized.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/elsetup.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/devbase.h
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/devbuiltin.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/devvisrc.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/devctlsrc.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/devbuiltins.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/hierdevice.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/osdi.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/osdicallback.h
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/osdifile.h
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/osdidevice.h
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/osdimodel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/osdiinstance.h
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/parseroutput.h
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/processutils.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/filesystem.h
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/filestack.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/sourceloc.h
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/pool.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/rpnexpr.h
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/identifier.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/rpnfunctor.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/rpnbuiltin.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/context.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/rpnstack.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/rpneval.h
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/options.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/node.h
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/introspection.h
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/circuit.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/klumatrix.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/simulator.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/output.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/outrawfile.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/nrsolver.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/core.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/coreop.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/coreopnr.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/coredcinc.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/coredctf.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/coreac.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/coreactf.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/corenoise.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/coretrancoef.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/coretrannr.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/coretran.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/an.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/ansupport.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/ansolution.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/answeep.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/anop.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/andcinc.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/andctf.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/anac.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/anactf.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/annoise.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/../include/antran.h 
    acct.cpp
    libplatform.cpp 
    dynload.cpp 
    limitfunctions.cpp
    status.cpp
    value.cpp
    parameterized.cpp
    devbase.cpp
    devvisrc.cpp 
    devctlsrc.cpp 
    devbuiltins.cpp 
    hierdevice.cpp
    osdicallback.cpp
    osdifile.cpp
    osdidevice.cpp
    osdimodel.cpp
    osdiinstance.cpp 
    parseroutput.cpp
    processutils.cpp
    filesystem.cpp
    filestack.cpp
    sourceloc.cpp
    pool.cpp
    identifier.cpp
    rpnexpr.cpp
    rpnbuiltin.cpp
    context.cpp
    rpnstack.cpp
    rpneval.cpp
    introspection.cpp
    options.cpp 
    node.cpp
    circuit.cpp
    ciroptions.cpp 
    cirvariables.cpp 
    cirparams.cpp
    klumatrix.cpp
    simulator.cpp
    output.cpp
    outrawfile.cpp
    nrsolver.cpp 
    core.cpp 
    coreop.cpp 
    coreopnr.cpp 
    coreophomotopy.cpp 
    coredcinc.cpp 
    coredctf.cpp 
    coreac.cpp 
    coreactf.cpp 
    corenoise.cpp
    coretrancoef.cpp 
    coretrannr.cpp 
    coretran.cpp
    an.cpp
    ansupport.cpp 
    ansolution.cpp 
    answeep.cpp
    anop.cpp
    andcinc.cpp 
    andctf.cpp 
    anac.cpp 
    anactf.cpp 
    annoise.cpp 
    antran.cpp 
)
target_include_directories(simlib PUBLIC 
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_BINARY_DIR}
)
# target_compile_definitions(dlib PRIVATE BUILDING_SIM_DLL)
